prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/async_constructor_rejected.diag.txt
ERROR: 'async constructor' is not allowed: a constructor must return the new instance, not a Future
testData/diagnostics/async_constructor_rejected.nut:2:8

class Foo {
  async constructor(x) {
        ^----------
    this.x = x


